Fix wrong padding of API link on large screens

--- a/css/app.css
+++ b/css/app.css
@@ -756,6 +756,7 @@ a {
   @media screen and (min-width: 40em) {
     .api-link {
       background-size: 80px auto;
+      padding-left: 116px;
       font-size: 1.75rem; } }
 
 .hljs {
